# murmure-api

./: .env  .env.example  .gitignore  AGENT.md  Cargo.toml  Dockerfile  README.md  README_SERVER.md  docker-compose.yml
docs/: BUILD_STATUS.md  GRPC_CLIENTS.md  QUICKSTART.md  SERVER.md
docs/examples/: README_RUST_CLIENT.md  README_RUST_FILE_CLIENT.md  README_STREAMING_CLIENT.md  USAGE.md
examples/: Cargo.toml  README.md  README_RUST_CLIENT.md  README_RUST_FILE_CLIENT.md  README_STREAMING_CLIENT.md  USAGE.md  build.rs  fix-mic-permission.sh  python_client.py  rust_client.rs  rust_file_client.rs  rust_record_client.rs  rust_streaming_client.rs
issues/murmure-api/done/: chore-2025-11-08-cleanup-duplicate-issue-file.md  chore-commit-init-changes.md  enhancement-2025-11-08-cleanup-lib-separation.md  enhancement-2025-11-08-fix-clippy-warnings.md  enhancement-2025-11-08-refactor-murmure-lib-to-tts.md  enhancement-2025-11-08-rename-lib-to-tts.md
issues/murmure-api/in_progress/: chore-commit-init-changes.md  enhancement-2025-11-08-add-tts-support.md  enhancement-2025-11-08-cleanup-lib-separation.md  enhancement-2025-11-08-fix-clippy-warnings.md  enhancement-2025-11-08-refactor-murmure-lib-to-tts.md  enhancement-2025-11-08-rename-lib-to-tts.md
issues/murmure-api/proposal/: chore-2025-11-08-cleanup-duplicate-issue-file.md  enhancement-2025-11-08-add-shell-script-linting.md  enhancement-2025-11-08-separate-config-from-transport.md
issues/murmure-api/todo/: chore-initialize-flowmates-workflow.md  enhancement-2025-11-08-add-tts-support.md
murmure-core/: Cargo.toml  test_piper_api
murmure-core/src/: lib.rs
murmure-core/src/stt/: audio.rs  config.rs  dictionary.rs  mod.rs  model.rs  transcription.rs
murmure-core/src/stt/engine/: mod.rs  timestamp.rs  transcription_engine.rs
murmure-core/src/tts/: audio.rs  config.rs  mod.rs  model.rs  stream.rs  synthesis.rs
murmure-core/src/tts/engine/: mod.rs  piper.rs  synthesis_engine.rs
murmure-lib/: Cargo.toml
murmure-lib/src/: audio.rs  model.rs  transcription.rs
murmure-server/: Cargo.toml  Dockerfile  build.rs
murmure-server/src/: main.rs
murmure-server/src/server/: grpc.rs  mod.rs
murmure-stt/: Cargo.toml
murmure-stt/src/: audio.rs
murmure-tts/: Cargo.toml
proto/: murmure.proto
scripts/: pre-work-hook  validate-workflow-state.py
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: audio.rs  config.rs  dictionary.rs  lib.rs  main.rs  model.rs  transcription.rs
src-tauri/src/server/: grpc.rs  mod.rs  murmure.rs
