[package]
name = "murmure-server"
version = "1.4.0"
description = "gRPC server for Murmure speech-to-text"
authors = ["al1x-ai.com"]
edition = "2021"

# Explicitly declare the binary target so cargo metadata works during
# cargo-chef prepare (when src files aren't copied yet).
[[bin]]
name = "murmure-server"
path = "src/main.rs"

[dependencies]
murmure-stt = { path = "../murmure-stt" }
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.12", features = ["tls", "tls-roots"] }
prost = "0.13"
prost-types = "0.13"
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
tonic-build = { version = "0.12", features = ["prost"] }
