[package]
name = "murmure-tts"
version = "1.4.0"
description = "Privacy-first speech-to-text library, running entirely on your machine"
authors = ["al1x-ai.com"]
edition = "2021"

[lib]
name = "murmure_tts"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hound = "3.5.1"
once_cell = "1"
anyhow = "1.0"
ort = { version = "2.0.0-rc.10", features = ["download-binaries"] }
ndarray = "0.16.1"
regex = "1.11.2"
thiserror = "2.0.16"
log = "0.4.28"
rphonetic = "3.0.4"
parking_lot = "0.12"
tempfile = "3.10"
toml = "0.8"
