[package]
name = "murmure"
version = "1.4.0"
description = "Privacy-first speech-to-text, running entirely on your machine"
authors = ["al1x-ai.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "murmure_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tonic-build = { version = "0.12", features = ["prost"] }
toml = "0.8"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hound = "3.5.1"
once_cell = "1"
anyhow = "1.0"
ort = { version = "2.0.0-rc.10", features = ["download-binaries"] }
ndarray = "0.16.1"
regex = "1.11.2"
thiserror = "2.0.16"
log = "0.4.28"
rphonetic = "3.0.4"
tokio = { version = "1", features = ["full"] }
parking_lot = "0.12"
tonic = { version = "0.12", features = ["tls", "tls-roots"] }
prost = "0.13"
prost-types = "0.13"
tempfile = "3.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.8"
tokio-stream = "0.1"

[[bin]]
name = "murmure-server"
path = "src/main.rs"
